@@ -76,4 +76,10 @@ public final class Lists {
             });
     return result;
   }
+
+  public static <K> List<K> newReversedArrayList(Collection<K> c) {
+    List<K> list = newArrayList(c);
+    Collections.reverse(list);
+    return list;
+  }
 }
